# RTube

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  mp4_to_hls.py  pyproject.toml  requirements.txt  setup.py  start_rtube.sh
.github/workflows/: publish.yml
migrations/versions/: 2a33e03c1d46_add_is_deleted_to_comments_for_soft_.py  95fdb1be53a6_add_parent_id_to_comments_for_threading.py  add_announcements_table.py  add_audit_logs_table.py  add_auth_type_to_users.py  add_favorites_table.py  add_playlists_tables.py  add_sso_subject_to_users.py  add_video_views_table.py  bb398ba13600_add_deleted_by_to_comments.py  ce7c7ff2a0aa_initial_schema.py  fd575abbada4_add_preview_field_to_videos.py
rtube/: __init__.py  app.py  auth.py  db.py  models.py  models_auth.py
rtube/routes/: __init__.py  admin.py  auth.py  encoding.py  playlists.py  videos.py
rtube/services/: __init__.py  encoder.py  ldap_auth.py  oidc_auth.py  saml_auth.py
rtube/static/: package-lock.json  package.json
rtube/static/js/: video-player.js
rtube/templates/: 400.html  401.html  403.html  404.html  405.html  413.html  500.html  501.html  503.html  base.html  index.html  video-player.html  video.html  videos.html
static/js/: plugin-test.js  video-player.js
templates/: index.html  video-player.html
tests/: __init__.py  conftest.py  test_bulk_delete.py  test_ldap_auth.py  test_models.py  test_oidc_auth.py  test_routes_admin.py  test_routes_auth.py  test_routes_videos.py  test_saml_auth.py  test_watch_delete.py
tools/: mp4_to_hls.py  populate_videos.py
(+21 files in other folders)
