[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtube"
version = "0.1.0"
description = "Streaming platform from scratch"
readme = "readme.md"
license = "MIT"
authors = [
    { name = "Richard Dally" }
]
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-login>=0.6.0",
    "flask-migrate>=4.0.0",
    "flask-session>=0.8.0",
    "argon2-cffi>=23.1.0",
    "psycopg2-binary",
    "python-ffmpeg-video-streaming==0.1.14",
    "ldap3>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/RichardDally/RTube"
Repository = "https://github.com/RichardDally/RTube"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "typer>=0.9.0",
]
